[gd_scene load_steps=33 format=2]

[ext_resource path="res://Script/UI/game_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Gugi-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Script/difficulty.gd" type="Script" id=3]
[ext_resource path="res://Script/modes.gd" type="Script" id=4]
[ext_resource path="res://Script/StartMenu.gd" type="Script" id=5]
[ext_resource path="res://Script/UI/menu_buttons.gd" type="Script" id=6]
[ext_resource path="res://Script/UI/Category.gd" type="Script" id=7]
[ext_resource path="res://Script/description/Description.gd" type="Script" id=8]
[ext_resource path="res://fonts/comingsoon.tres" type="Theme" id=9]
[ext_resource path="res://assets/image/vintage-military-weapons-seamless-pattern/8.jpg" type="Texture" id=10]
[ext_resource path="res://music/Hitman.mp3" type="AudioStream" id=11]
[ext_resource path="res://Script/UI/leaderboard_cont.gd" type="Script" id=13]
[ext_resource path="res://assets/theme/button_theme.tres" type="Theme" id=14]
[ext_resource path="res://assets/image/1f3466c4-56e6-4ba7-a5b3-954579726480.jpg" type="Texture" id=15]
[ext_resource path="res://assets/theme/button_theme_leaderboards.tres" type="Theme" id=16]
[ext_resource path="res://assets/theme/button_theme_warning.tres" type="Theme" id=17]

[sub_resource type="DynamicFont" id=12]
size = 29
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=14]
default_font = SubResource( 13 )

[sub_resource type="DynamicFont" id=15]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=16]
default_font = SubResource( 15 )

[node name="game_interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = 2.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 750.0 ],
"_edit_vertical_guides_": [ 474.0 ]
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -4.0
margin_right = 5000.0
margin_bottom = 4996.0
texture = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = -4.0
margin_right = 959.0
margin_bottom = 1277.0
color = Color( 1, 1, 1, 0.419608 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 476, 282 )
texture = ExtResource( 15 )

[node name="menu_buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="board" type="Node2D" parent="menu_buttons"]
visible = false
position = Vector2( 0, -1225 )

[node name="vbox" type="VBoxContainer" parent="menu_buttons/board"]
margin_left = 80.0
margin_top = 40.0
margin_right = 890.0
margin_bottom = 1222.0
rect_min_size = Vector2( 0, 531 )
alignment = 1
script = ExtResource( 13 )

[node name="instruction" type="Label" parent="menu_buttons/board/vbox"]
unique_name_in_owner = true
margin_top = 545.0
margin_right = 810.0
margin_bottom = 575.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
align = 1
valign = 1
autowrap = true

[node name="ld_back" type="Button" parent="menu_buttons/board/vbox"]
margin_top = 579.0
margin_right = 810.0
margin_bottom = 636.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.913725, 0.0588235, 0.0588235, 1 )
custom_fonts/font = SubResource( 11 )
text = "Back"
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="menu_buttons/board/vbox"]
visible = false
margin_top = 638.0
margin_right = 810.0
margin_bottom = 638.0
text = "sdfjasdf asdf asdfasdf 
sadf asd f
asdfasdf
 "

[node name="move_tween" type="Tween" parent="menu_buttons/board"]

[node name="guns" type="Node2D" parent="menu_buttons"]
position = Vector2( 700, 0 )
script = ExtResource( 3 )

[node name="vbox" type="VBoxContainer" parent="menu_buttons/guns"]
margin_left = 290.0
margin_top = 420.0
margin_right = 654.0
margin_bottom = 951.0
rect_min_size = Vector2( 0, 531 )
alignment = 1

[node name="glock" type="Button" parent="menu_buttons/guns/vbox"]
margin_top = 157.0
margin_right = 364.0
margin_bottom = 228.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.521569, 0.0941176, 1 )
custom_fonts/font = SubResource( 4 )
text = "Glock"

[node name="calibre45" type="Button" parent="menu_buttons/guns/vbox"]
margin_top = 232.0
margin_right = 364.0
margin_bottom = 303.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.521569, 0.0941176, 1 )
custom_fonts/font = SubResource( 5 )
text = "Calibre 45"

[node name="m16_rifle" type="Button" parent="menu_buttons/guns/vbox"]
visible = false
margin_top = 267.0
margin_right = 364.0
margin_bottom = 324.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "M16 Rifle"
flat = true

[node name="back" type="Button" parent="menu_buttons/guns/vbox"]
margin_top = 307.0
margin_right = 364.0
margin_bottom = 374.0
theme = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.913725, 0.0588235, 0.0588235, 1 )
custom_fonts/font = SubResource( 6 )
text = "Back"

[node name="move_tween" type="Tween" parent="menu_buttons/guns"]

[node name="smg" type="Node2D" parent="menu_buttons"]
position = Vector2( 700, 0 )
script = ExtResource( 3 )

[node name="vbox" type="VBoxContainer" parent="menu_buttons/smg"]
margin_left = 290.0
margin_top = 420.0
margin_right = 654.0
margin_bottom = 951.0
rect_min_size = Vector2( 0, 531 )
alignment = 1

[node name="Smg" type="Button" parent="menu_buttons/smg/vbox"]
visible = false
margin_top = 176.0
margin_right = 364.0
margin_bottom = 233.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.521569, 0.0941176, 1 )
custom_fonts/font = SubResource( 4 )
text = "SMG"
flat = true

[node name="Smg2" type="Button" parent="menu_buttons/smg/vbox"]
margin_top = 194.0
margin_right = 364.0
margin_bottom = 265.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "MP5"

[node name="calibre45" type="Button" parent="menu_buttons/smg/vbox"]
visible = false
margin_top = 237.0
margin_right = 364.0
margin_bottom = 294.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.521569, 0.0941176, 1 )
custom_fonts/font = SubResource( 5 )
text = "Calibre 45"
flat = true

[node name="m16_rifle" type="Button" parent="menu_buttons/smg/vbox"]
visible = false
margin_top = 267.0
margin_right = 364.0
margin_bottom = 324.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "M16 Rifle"
flat = true

[node name="mp5_back" type="Button" parent="menu_buttons/smg/vbox"]
margin_top = 269.0
margin_right = 364.0
margin_bottom = 336.0
theme = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.913725, 0.0588235, 0.0588235, 1 )
custom_fonts/font = SubResource( 6 )
text = "Back"

[node name="move_tween" type="Tween" parent="menu_buttons/smg"]

[node name="start" type="Node2D" parent="menu_buttons"]
script = ExtResource( 5 )

[node name="vbox" type="VBoxContainer" parent="menu_buttons/start"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 325.0
margin_top = 555.0
margin_right = 621.0
margin_bottom = 797.0
alignment = 1

[node name="start" type="Button" parent="menu_buttons/start/vbox"]
margin_top = 12.0
margin_right = 313.0
margin_bottom = 83.0
focus_mode = 0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Start Game"

[node name="leaderboard" type="Button" parent="menu_buttons/start/vbox"]
margin_top = 87.0
margin_right = 313.0
margin_bottom = 158.0
focus_mode = 0
theme = ExtResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Leaderboard"

[node name="quit" type="Button" parent="menu_buttons/start/vbox"]
margin_top = 162.0
margin_right = 313.0
margin_bottom = 229.0
theme = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.913725, 0.0588235, 0.0588235, 1 )
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="move_tween" type="Tween" parent="menu_buttons/start"]

[node name="modes" type="Node2D" parent="menu_buttons"]
position = Vector2( 700, 0 )
script = ExtResource( 4 )

[node name="vbox" type="VBoxContainer" parent="menu_buttons/modes"]
margin_left = 308.0
margin_top = 429.0
margin_right = 638.0
margin_bottom = 1014.0
alignment = 1

[node name="video tutorial" type="Button" parent="menu_buttons/modes/vbox"]
margin_top = 109.0
margin_right = 373.0
margin_bottom = 180.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.313726, 0.858824, 0.141176, 1 )
custom_colors/font_color_pressed = Color( 0.211765, 0.101961, 0.839216, 1 )
custom_fonts/font = SubResource( 7 )
text = "Video Tutorial"

[node name="Description pdf" type="Button" parent="menu_buttons/modes/vbox"]
margin_top = 184.0
margin_right = 373.0
margin_bottom = 255.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.313726, 0.858824, 0.141176, 1 )
custom_colors/font_color_pressed = Color( 0.211765, 0.101961, 0.839216, 1 )
custom_fonts/font = SubResource( 7 )
text = "Description pdf"

[node name="disassemble" type="Button" parent="menu_buttons/modes/vbox"]
margin_top = 259.0
margin_right = 373.0
margin_bottom = 330.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.521569, 0.0941176, 1 )
custom_fonts/font = SubResource( 7 )
text = "Disassemble"

[node name="assemble" type="Button" parent="menu_buttons/modes/vbox"]
margin_top = 334.0
margin_right = 373.0
margin_bottom = 405.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.521569, 0.0941176, 1 )
custom_fonts/font = SubResource( 8 )
text = "Assemble"

[node name="back_to_difficulty" type="Button" parent="menu_buttons/modes/vbox"]
margin_top = 409.0
margin_right = 373.0
margin_bottom = 476.0
theme = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.913725, 0.0588235, 0.0588235, 1 )
custom_fonts/font = SubResource( 8 )
text = "Back"

[node name="vbox_calibre" type="VBoxContainer" parent="menu_buttons/modes"]
visible = false
margin_left = 308.0
margin_top = 429.0
margin_right = 638.0
margin_bottom = 1014.0
alignment = 1

[node name="colt_video tutorial" type="Button" parent="menu_buttons/modes/vbox_calibre"]
margin_top = 109.0
margin_right = 373.0
margin_bottom = 180.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.313726, 0.858824, 0.141176, 1 )
custom_colors/font_color_pressed = Color( 0.211765, 0.101961, 0.839216, 1 )
custom_fonts/font = SubResource( 7 )
text = "Video Tutorial"

[node name="colt_Description pdf" type="Button" parent="menu_buttons/modes/vbox_calibre"]
margin_top = 184.0
margin_right = 373.0
margin_bottom = 255.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.313726, 0.858824, 0.141176, 1 )
custom_colors/font_color_pressed = Color( 0.211765, 0.101961, 0.839216, 1 )
custom_fonts/font = SubResource( 7 )
text = "Description pdf"

[node name="colt_disassemble" type="Button" parent="menu_buttons/modes/vbox_calibre"]
margin_top = 259.0
margin_right = 373.0
margin_bottom = 330.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.521569, 0.0941176, 1 )
custom_fonts/font = SubResource( 7 )
text = "Disassemble"

[node name="colt_assemble" type="Button" parent="menu_buttons/modes/vbox_calibre"]
margin_top = 334.0
margin_right = 373.0
margin_bottom = 405.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.521569, 0.0941176, 1 )
custom_fonts/font = SubResource( 8 )
text = "Assemble"

[node name="back_to_difficulty" type="Button" parent="menu_buttons/modes/vbox_calibre"]
margin_top = 409.0
margin_right = 373.0
margin_bottom = 476.0
theme = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.913725, 0.0588235, 0.0588235, 1 )
custom_fonts/font = SubResource( 8 )
text = "Back"

[node name="vbox_Smg" type="VBoxContainer" parent="menu_buttons/modes"]
visible = false
margin_left = 308.0
margin_top = 429.0
margin_right = 638.0
margin_bottom = 1014.0
alignment = 1

[node name="sm_video tutorial" type="Button" parent="menu_buttons/modes/vbox_Smg"]
margin_top = 109.0
margin_right = 373.0
margin_bottom = 180.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.313726, 0.858824, 0.141176, 1 )
custom_colors/font_color_pressed = Color( 0.211765, 0.101961, 0.839216, 1 )
custom_fonts/font = SubResource( 7 )
text = "Video Tutorial"

[node name="mp5_Description pdf" type="Button" parent="menu_buttons/modes/vbox_Smg"]
margin_top = 184.0
margin_right = 373.0
margin_bottom = 255.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.313726, 0.858824, 0.141176, 1 )
custom_colors/font_color_pressed = Color( 0.211765, 0.101961, 0.839216, 1 )
custom_fonts/font = SubResource( 7 )
text = "Description pdf"

[node name="smg_disassemble" type="Button" parent="menu_buttons/modes/vbox_Smg"]
margin_top = 259.0
margin_right = 373.0
margin_bottom = 330.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.521569, 0.0941176, 1 )
custom_fonts/font = SubResource( 7 )
text = "Disassemble"

[node name="smg_assemble" type="Button" parent="menu_buttons/modes/vbox_Smg"]
margin_top = 334.0
margin_right = 373.0
margin_bottom = 405.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.521569, 0.0941176, 1 )
custom_fonts/font = SubResource( 8 )
text = "Assemble"

[node name="back_to_difficulty" type="Button" parent="menu_buttons/modes/vbox_Smg"]
margin_top = 409.0
margin_right = 373.0
margin_bottom = 476.0
theme = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.913725, 0.0588235, 0.0588235, 1 )
custom_fonts/font = SubResource( 8 )
text = "Back"

[node name="move_tween" type="Tween" parent="menu_buttons/modes"]

[node name="Category" type="Node2D" parent="menu_buttons"]
position = Vector2( 700, 0 )
script = ExtResource( 7 )

[node name="VBox" type="VBoxContainer" parent="menu_buttons/Category"]
margin_left = 359.0
margin_top = 526.0
margin_right = 592.0
margin_bottom = 890.0
alignment = 1

[node name="Pistol" type="Button" parent="menu_buttons/Category/VBox"]
margin_top = 73.0
margin_right = 233.0
margin_bottom = 144.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Pistol"

[node name="smg" type="Button" parent="menu_buttons/Category/VBox"]
margin_top = 148.0
margin_right = 233.0
margin_bottom = 219.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "SMG"

[node name="Rifle" type="Button" parent="menu_buttons/Category/VBox"]
visible = false
margin_top = 184.0
margin_right = 233.0
margin_bottom = 241.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.521569, 0.0941176, 1 )
custom_fonts/font = SubResource( 10 )
text = "Rifle"
flat = true

[node name="Back" type="Button" parent="menu_buttons/Category/VBox"]
margin_top = 223.0
margin_right = 233.0
margin_bottom = 290.0
theme = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.913725, 0.0588235, 0.0588235, 1 )
custom_fonts/font = SubResource( 10 )
text = "Back"

[node name="move_tween" type="Tween" parent="menu_buttons/Category"]

[node name="notify" type="Control" parent="menu_buttons"]
visible = false
anchor_top = 6.15
anchor_right = 24.1
anchor_bottom = 19.9
margin_bottom = -6.10352e-05

[node name="ColorRect" type="ColorRect" parent="menu_buttons/notify"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.368627, 0.133333, 0.133333, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="menu_buttons/notify"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 162.0
margin_right = -5.0
margin_bottom = -284.0

[node name="Label" type="Label" parent="menu_buttons/notify/VBoxContainer"]
margin_right = 959.0
margin_bottom = 91.0
theme = ExtResource( 9 )
text = "Coming Soon"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="back_to_mode" type="Button" parent="menu_buttons/notify/VBoxContainer"]
margin_top = 95.0
margin_right = 959.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.913725, 0.0588235, 0.0588235, 1 )
custom_fonts/font = SubResource( 10 )
text = "Back"
flat = true

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -813.0
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_left = -7.0
margin_top = 78.0
margin_right = 962.0
margin_bottom = 464.0
color = Color( 0, 0, 0, 0.666667 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
visible = false
margin_left = 47.0
margin_top = 116.0
margin_right = 651.0
margin_bottom = 433.0
theme = SubResource( 14 )
bbcode_enabled = true
bbcode_text = "[i]Glock 17 [i]
[color=#88ffff22]Place origin: Austalia [/color] 
Designed: 1979 -1982
Designer: Ganston Glock
Produced: 1982 - Present
IN present: 1982-Present
Barrel lenght:  186 mm
Cartridge: 9×19 mm parabellum
"
text = "Glock 17 
Place origin: Austalia  
Designed: 1979 -1982
Designer: Ganston Glock
Produced: 1982 - Present
IN present: 1982-Present
Barrel lenght:  186 mm
Cartridge: 9×19 mm parabellum
"
scroll_active = false
scroll_following = true

[node name="Calibre" type="RichTextLabel" parent="Control"]
visible = false
margin_left = 47.0
margin_top = 116.0
margin_right = 651.0
margin_bottom = 433.0
theme = SubResource( 14 )
bbcode_enabled = true
bbcode_text = "[i] Colt M1911 [i]
[color=#88ffff22] Place origin: United States [/color]
Designed: 1904-1911
Designer: John Browning
Produced: 1911 - Present
In present: 1911 - Present
Barrel length: 127 mm
Cartridge: .45 ACP"
text = " Colt M1911 
 Place origin: United States 
Designed: 1904-1911
Designer: John Browning
Produced: 1911 - Present
In present: 1911 - Present
Barrel length: 127 mm
Cartridge: .45 ACP"
scroll_active = false
scroll_following = true
__meta__ = {
"_editor_description_": ""
}

[node name="MP5" type="RichTextLabel" parent="Control"]
visible = false
margin_left = 47.0
margin_top = 116.0
margin_right = 651.0
margin_bottom = 433.0
theme = SubResource( 16 )
text = "MP5 Submachine Gun

Place of origin: West Germany
Designed: 1964
Designer: Heinrich Vollmer
Produced: 1966 - Present
In service: 1966 - Present
Barrel length: 228 mm (9 in)
Cartridge: 9×19 mm Parabellum"

[node name="M-16" type="RichTextLabel" parent="Control"]
visible = false
margin_left = 47.0
margin_top = 116.0
margin_right = 651.0
margin_bottom = 433.0
theme = SubResource( 14 )
bbcode_enabled = true
bbcode_text = "[i] M16 Rifle [i]
[color=#88ffff22] Place origin: United States [/color]
Designed: 1956-1960
Designer: Eugene Stoner
Produced: 1960 - Present
In present: 1960 - Present
Barrel length: 508 mm (20 in)
Cartridge: 5.56×45 mm NATO"
text = " M16 Rifle 
 Place origin: United States 
Designed: 1956-1960
Designer: Eugene Stoner
Produced: 1960 - Present
In present: 1960 - Present
Barrel length: 508 mm (20 in)
Cartridge: 5.56×45 mm NATO"
scroll_active = false
scroll_following = true
__meta__ = {
"_editor_description_": ""
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -1.0
autoplay = true

[connection signal="proceed_calibre" from="." to="menu_buttons" method="_on_game_interface_proceed_calibre"]
[connection signal="proceed_glock" from="." to="menu_buttons" method="_on_game_interface_proceed_glock"]
[connection signal="proceed_smg" from="." to="menu_buttons" method="_on_game_interface_proceed_smg"]
[connection signal="pressed" from="menu_buttons/board/vbox/ld_back" to="menu_buttons" method="_on_ld_back_pressed"]
[connection signal="gui_input" from="menu_buttons/guns/vbox/glock" to="." method="_on_glock_gui_input"]
[connection signal="gui_input" from="menu_buttons/guns/vbox/glock" to="menu_buttons" method="_on_glock_gui_input"]
[connection signal="pressed" from="menu_buttons/guns/vbox/glock" to="." method="_on_glock_pressed"]
[connection signal="pressed" from="menu_buttons/guns/vbox/calibre45" to="." method="_on_calibre45_pressed"]
[connection signal="pressed" from="menu_buttons/guns/vbox/back" to="menu_buttons" method="_on_back_pressed"]
[connection signal="gui_input" from="menu_buttons/smg/vbox/Smg2" to="." method="_on_glock_gui_input"]
[connection signal="gui_input" from="menu_buttons/smg/vbox/Smg2" to="menu_buttons" method="_on_glock_gui_input"]
[connection signal="pressed" from="menu_buttons/smg/vbox/Smg2" to="." method="_on_Smg2_pressed"]
[connection signal="pressed" from="menu_buttons/smg/vbox/mp5_back" to="menu_buttons" method="_on_mp5_back_pressed"]
[connection signal="pressed" from="menu_buttons/start/vbox/start" to="menu_buttons" method="_on_start_pressed"]
[connection signal="pressed" from="menu_buttons/start/vbox/leaderboard" to="menu_buttons" method="_on_leaderboard_pressed"]
[connection signal="pressed" from="menu_buttons/start/vbox/quit" to="menu_buttons" method="_on_quit_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox/video tutorial" to="menu_buttons" method="_on_video_tutorial_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox/Description pdf" to="menu_buttons" method="_on_Description_pdf_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox/disassemble" to="." method="_on_disassemble_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox/disassemble" to="menu_buttons" method="_on_disassemble_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox/assemble" to="." method="_on_assemble_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox/back_to_difficulty" to="menu_buttons" method="_on_back_to_difficulty_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox_calibre/colt_video tutorial" to="menu_buttons" method="_on_colt_video_tutorial_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox_calibre/colt_Description pdf" to="menu_buttons" method="_on_colt_Description_pdf_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox_calibre/colt_disassemble" to="." method="_on_colt_disassemble_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox_calibre/colt_assemble" to="." method="_on_colt_assemble_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox_calibre/back_to_difficulty" to="menu_buttons" method="_on_back_to_difficulty_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox_Smg/sm_video tutorial" to="menu_buttons" method="_on_sm_video_tutorial_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox_Smg/mp5_Description pdf" to="menu_buttons" method="_on_mp5_Description_pdf_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox_Smg/smg_disassemble" to="." method="_on_smg_disassemble_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox_Smg/smg_assemble" to="." method="_on_smg_assemble_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox_Smg/back_to_difficulty" to="menu_buttons" method="_on_back_to_difficulty_pressed"]
[connection signal="pressed" from="menu_buttons/Category/VBox/Pistol" to="menu_buttons" method="_on_Pistol_pressed"]
[connection signal="pressed" from="menu_buttons/Category/VBox/smg" to="menu_buttons" method="_on_smg_pressed"]
[connection signal="pressed" from="menu_buttons/Category/VBox/Back" to="menu_buttons" method="_on_Back_pressed"]
[connection signal="pressed" from="menu_buttons/notify/VBoxContainer/back_to_mode" to="menu_buttons" method="_on_back_to_mode_pressed"]
